# gatekeeper

./: .gitignore  Makefile.am  README.md  configure.ac  crypto.c  crypto.h  group.c  group.h  host.c  host.h  login.c  login.h  main.c  nss-common.c  nss-common.h  nss-grp.c  nss-initgroups.c  nss-pwd.c  nss-spwd.c  pam-account.c  pam-auth.c  pam-common.h  pam-password.c  pam-session.c  so.map.in  user.c  user.h
sqlite/: Makefile.am  demo.sql  empty.sql
